# peerannot

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  VERSION.txt  datasets.html  genindex.html  index.html  objects.inv  pipeline.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  strategies.html  test_requirements.txt
.circleci/: artifact_path  config.yml
.doctrees/: environment.pickle  index.doctree  pipeline.doctree  strategies.doctree
.doctrees/auto_examples/: index.doctree
.github/workflows/: documentation.yaml  gh-pages.yml  install.yml  pytest.yml  python-publish.yml
_sources/: pipeline.rst.txt
_sources/auto_examples/: index.rst.txt
auto_examples/: index.html
datasets/: customDataset.py
datasets/bird_audio/: birds_audio.py  metadata.json
datasets/cifar10H/: cifar10h.py  job_cifar.sh  metadata.json  run_all.sh
datasets/krippendorff-data/: answers.json  metadata.json
datasets/labelme/: converter.py  job_labelme.sh  labelme.py  metadata.json  run_all.sh  run_conal.sh
datasets/music/: job_music.sh  metadata.json  music.py  run_all.sh
doc/: Makefile  conf.py  get_started.rst  glossary.rst  index.rst  mystyle.sty
docs/: Makefile  conf.py  index.rst  strategies.rst
examples/: CoNAL.ipynb  README.rst  music.ipynb  peerannot_API_CLI.ipynb  peerannot_labelme.ipynb
html/: .buildinfo  datasets.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  search.html  searchindex.js  strategies.html
peerannot/: __init__.py
tests/: test_filecreation.py  test_identification.py  test_models.py
(+99 files in other folders)
