[metadata]
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
description = Crowdsourcing library
download_url = https://github.com/peerannot/peerannot.git
long_description = Python library for crowdsourcig image classification
license = BSD (3-clause)
maintainer = Tanguy Lefort
maintainer_email = tanguy.lefort@umontpellier.fr
name = peerannot
platforms = any
version = file: VERSION.txt

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    pandas
    click>=8.0
    pytest
    torch
    torchvision
    torchmetrics
    scikit-learn
    plotly>=4.12
    tqdm
    pooch
    Pillow

project_urls =
    Documentation = https://peerannot.github.io/
    Source = https://github.com/peerannot/peerannot
    Tracker = https://github.com/peerannot/peerannot/issues
